Updated default map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/DontTouch.DontTouch
-EditorStartupMap=/Game/DontTouch.DontTouch
+GameDefaultMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
+EditorStartupMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
 GlobalDefaultGameMode=/Game/Coding/Derek_Scheuerman/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
