--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
 EditorStartupMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
 GlobalDefaultGameMode=/Game/Coding/Derek_Scheuerman/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GameInstanceClass=/Game/Coding/Luke_Samuelson/BP_GameVariables.BP_GameVariables_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
