--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -78,6 +78,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="ForwardBack",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="LeftRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="ForwardBack",Scale=-1.000000,Key=S)
