--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
+GameDefaultMap=/Game/Coding/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
 GlobalDefaultGameMode=/Game/Coding/Derek_Scheuerman/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
-GameInstanceClass=/Game/Coding/Luke_Samuelson/BP_GameVariables.BP_GameVariables_C
+GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
