--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
+GameDefaultMap=/Game/Coding/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
-GlobalDefaultGameMode=/Game/Coding/Derek_Scheuerman/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/Coding/AceWest/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
