--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Coding/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
 GlobalDefaultGameMode=/Game/Coding/AceWest/BP_GameMode.BP_GameMode_C
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Coding/Luke_Samuelson/BP_GameVariables.BP_GameVariables_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
