Imagine Making Level Sequences (Couldn't be me)
Added all needed level sequences. Still needs declaration and implementation.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Coding/MainMenu/MainMenu.MainMenu
-EditorStartupMap=/Game/Solus_Prototype/Solus_Test.Solus_Test
+EditorStartupMap=/Game/Solus_Prototype/Solus_Sam_Map.Solus_Sam_Map
 GlobalDefaultGameMode=/Game/Coding/AceWest/BP_GameMode.BP_GameMode_C
 GameInstanceClass=/Game/Coding/Luke_Samuelson/BP_GameVariables.BP_GameVariables_C
 
