--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Coding/MarkSanders/MainMenu/MainMenu.MainMenu
 EditorStartupMap=/Game/Coding/MarkSanders/MainMenu/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/Coding/AceWest/BP_GameMode.BP_GameMode_C
+GlobalDefaultGameMode=/Game/Coding/Derek_Scheuerman/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GameInstanceClass=/Game/Coding/Luke_Samuelson/BP_GameVariables.BP_GameVariables_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
